--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
   box-sizing: border-box;
 }
 
+h1 {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
 body {
   background-color: #1f1f1f;
   font-family: 'Muli', sans-serif;
@@ -36,7 +42,7 @@ body {
 
 .progress-container::before {
   content: '';
-  background-color: var(--line-border-fill);
+  background-color: var(--line-border-empty);
   position: absolute;
   top: 50%;
   left: 0;
