--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ body {
   justify-content: space-between;
   position: relative;
   margin-bottom: 30px;
+  margin-top: 30px;
   max-width: 100%;
   width: 350px;
 }
